--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
         <img class="orilla" src="img/orilla.png" alt="Logo Orilla">
     </header>
 
-    <main>
-        <section>
-            <h1>Celebrate <span>your birthday</span> <span>at Orilla</span></h1>
-            <p>We are delighted to introduce our Orilla Bar & Grill Birthday Program. We would like to invite you to a free Cream & Dulce de Leche Cake and Glass of Prosecco.</p>
-            
-            <button type="button" class="btn btn-dangers">Reserve Now!</button>
+    <div class="container-fluid">
+        <div class="container80">
 
-        </section>
+            <div class="row">
+                <div class="col padding-5">
+                    <h1>Celebrate <span>your birthday</span> <span>at Orilla</span></h1>
+                    <p>We are delighted to introduce our Orilla Bar & Grill Birthday Program. We would like to invite you to a free Cream & Dulce de Leche Cake and Glass of Prosecco.</p>
+                    
+                    <button type="button" class="btn btn-dangers">Reserve Now!</button>           
+                </div>
 
-        <section>
-            <img src="img/collage.png" alt="Collage">
-        </section>
-    </main>
+                <div class="col">
+                    <img src="img/collage.png" alt="Collage">
+                </div>
+            </div>
+
+            </div>
+        </div>
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
