--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Birthday</title>
+    <title>Halloween</title>
 </head>
 <body>
     <header>
@@ -15,19 +15,19 @@
         <div class="container80">
 
             <div class="row">
-                <div class="col padding-5">
+                <div class="col-lg-6 col-xs-12 padding-5">
                     <h1>Celebrate <span>your birthday</span> <span>at Orilla</span></h1>
                     <p>We are delighted to introduce our Orilla Bar & Grill Birthday Program. We would like to invite you to a free Cream & Dulce de Leche Cake and Glass of Prosecco.</p>
                     
                     <button type="button" class="btn btn-dangers">Reserve Now!</button>           
                 </div>
 
-                <div class="col">
-                    <img src="img/collage.png" alt="Collage">
+                <div class="col-lg-6 col-xs-12">
+                    <img src="img/collage.png" class="img-fluid" alt="Collage">
                 </div>
             </div>
 
-            </div>
+            </div> 
         </div>
     </div>
 
