--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <title>Halloween</title>
 </head>
 <body>
-    <header>
-        <img class="orilla" src="img/orilla.png" alt="Logo Orilla">
+    <header class="container">
+        <img class="orilla img-fluid" src="img/orilla.png" alt="Logo Orilla">
     </header>
 
-    <div class="container-fluid">
+    <div class="container-fluid contenedor">
         <div class="container80">
 
             <div class="row">
                 <div class="col-lg-6 col-xs-12 padding-5">
-                    <h1>Celebrate <span>your birthday</span> <span>at Orilla</span></h1>
+                    <h1>Celebrate <br><span>your birthday</span> <span>at Orilla</span></h1>
                     <p>We are delighted to introduce our Orilla Bar & Grill Birthday Program. We would like to invite you to a free Cream & Dulce de Leche Cake and Glass of Prosecco.</p>
                     
                     <button type="button" class="btn btn-dangers">Reserve Now!</button>           
                 </div>
 
                 <div class="col-lg-6 col-xs-12">
-                    <img src="img/collage.png" class="img-fluid" alt="Collage">
+                    <img src="img/collage.png" class="img-fluid collage" alt="Collage">
                 </div>
             </div>
 
